[gd_scene load_steps=12 format=3 uid="uid://di53xit540gqa"]

[ext_resource type="Script" uid="uid://bablyi76071k6" path="res://scenes/animals/pen.gd" id="1_ngeja"]
[ext_resource type="Theme" uid="uid://cqid6eqdw6f54" path="res://scenes/ui/ui.tres" id="2_spjee"]
[ext_resource type="Texture2D" uid="uid://beabds00q2sq8" path="res://assets/graphics/misc/tick.png" id="3_y77hr"]
[ext_resource type="Texture2D" uid="uid://fwm1ni6s50mq" path="res://assets/graphics/misc/cross.png" id="4_bsgl4"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lpxs5"]
size = Vector2(166, 166)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ngeja"]
size = Vector2(10, 186)

[sub_resource type="CircleShape2D" id="CircleShape2D_lpxs5"]
radius = 250.0

[sub_resource type="Animation" id="Animation_c34k1"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Cross:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Cross:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_dxn25"]
resource_name = "cross"
length = 0.5
step = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Cross:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Cross:modulate")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_ichob"]
resource_name = "tick"
length = 0.5
step = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Tick:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Tick:modulate")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_2tby2"]
_data = {
&"RESET": SubResource("Animation_c34k1"),
&"cross": SubResource("Animation_dxn25"),
&"tick": SubResource("Animation_ichob")
}

[node name="Pen" type="Node2D" groups=["Pens"]]
z_index = -1
script = ExtResource("1_ngeja")

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -93.0
offset_top = -93.0
offset_right = 93.0
offset_bottom = 93.0
mouse_filter = 1
color = Color(0.947, 0.929, 0.778, 1)

[node name="PenEnclosure" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 2

[node name="AnimalIcon" type="TextureRect" parent="PenEnclosure"]
modulate = Color(1, 1, 1, 0.5)
offset_left = -100.0
offset_top = -100.0
offset_right = -60.0
offset_bottom = -60.0
scale = Vector2(5, 5)

[node name="CollisionShape2D" type="CollisionShape2D" parent="PenEnclosure"]
shape = SubResource("RectangleShape2D_lpxs5")

[node name="Walls" type="Node2D" parent="."]

[node name="StaticBody2D" type="StaticBody2D" parent="Walls"]
position = Vector2(-93, 0)
collision_layer = 4
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/StaticBody2D"]
position = Vector2(5, 0)
shape = SubResource("RectangleShape2D_ngeja")

[node name="StaticBody2D2" type="StaticBody2D" parent="Walls"]
position = Vector2(0, -88)
collision_layer = 4
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/StaticBody2D2"]
rotation = 1.57079
shape = SubResource("RectangleShape2D_ngeja")

[node name="StaticBody2D3" type="StaticBody2D" parent="Walls"]
position = Vector2(0, 88)
collision_layer = 4
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/StaticBody2D3"]
rotation = 1.57079
shape = SubResource("RectangleShape2D_ngeja")

[node name="StaticBody2D4" type="StaticBody2D" parent="Walls"]
position = Vector2(88, 0)
rotation = -1.57079
collision_layer = 4
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/StaticBody2D4"]
rotation = 1.57079
shape = SubResource("RectangleShape2D_ngeja")

[node name="KickArea" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="KickArea"]
shape = SubResource("CircleShape2D_lpxs5")

[node name="AnimalsCount" type="Label" parent="."]
offset_left = -40.0
offset_top = -145.0
offset_right = 40.0
offset_bottom = -122.0
theme = ExtResource("2_spjee")
theme_override_font_sizes/font_size = 37
text = "0 / 6"
horizontal_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_2tby2")
}

[node name="Tick" type="Sprite2D" parent="."]
scale = Vector2(5.1875, 5.1875)
texture = ExtResource("3_y77hr")

[node name="Cross" type="Sprite2D" parent="."]
visible = false
scale = Vector2(5.1875, 5.1875)
texture = ExtResource("4_bsgl4")

[connection signal="body_entered" from="PenEnclosure" to="." method="_on_pen_enclosure_body_entered"]
[connection signal="body_exited" from="PenEnclosure" to="." method="_on_pen_enclosure_body_exited"]
[connection signal="mouse_entered" from="PenEnclosure" to="." method="_on_pen_enclosure_mouse_entered"]
[connection signal="mouse_exited" from="PenEnclosure" to="." method="_on_pen_enclosure_mouse_exited"]
[connection signal="body_entered" from="KickArea" to="." method="_on_kick_area_body_entered"]
[connection signal="body_exited" from="KickArea" to="." method="_on_kick_area_body_exited"]
